tests/negative/test_decl_glob_cn_not_init.orb
i32 cn x;

fnc main() {}